--- a/package.json
+++ b/package.json
@@ -9,15 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@next/bundle-analyzer": "^12.0.9",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "framer": "^2.0.0-beta.18",
+    "framer-motion": "^5.5.6-beta.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "next": "12.1.0",
+    "next-sanity": "^0.4.0",
+    "next-sitemap": "^2.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-device-detect": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
+    "react-parallax": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "sass": "1.43.2",
     "typescript": "4.6.2"
   }
 }
