--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-parallax": "^3.3.0"
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-gtm-module": "^2.0.1",
     "cross-env": "^7.0.3",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
