--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/raleway": "^4.5.5",
     "@next/bundle-analyzer": "^12.0.9",
     "@sanity/block-content-to-react": "^3.0.0",
-    "framer": "^2.0.0-beta.18",
-    "framer-motion": "^5.5.6-beta.0",
+    "framer": "^2.1.0",
+    "framer-motion": "^5.6.0",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "next": "12.1.0",
