--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/raleway": "^4.5.5",
+    "@mailchimp/mailchimp_marketing": "^3.0.74",
     "@next/bundle-analyzer": "^12.0.9",
+    "@popmotion/popcorn": "^0.4.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "framer": "^2.1.0",
     "framer-motion": "^5.6.0",
