--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/bundle-analyzer": "^12.0.9",
     "@popmotion/popcorn": "^0.4.4",
     "@sanity/block-content-to-react": "^3.0.0",
+    "@smakss/search": "^1.2.2",
     "framer": "^2.1.0",
     "framer-motion": "^5.6.0",
     "graphql": "^16.3.0",
