--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@popmotion/popcorn": "^0.4.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "@smakss/search": "^1.2.2",
+    "formik": "^2.2.9",
     "framer": "^2.1.0",
     "framer-motion": "^5.6.0",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
+    "mailersend": "^1.3.2",
     "next": "12.1.0",
     "next-sanity": "^0.4.0",
     "next-sitemap": "^2.1.6",
