--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "find:unused": "next-unused"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.1",
-    "@emotion/react": "^11.7.1",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/raleway": "^4.5.5",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
@@ -25,14 +25,14 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@smakss/search": "^1.2.2",
     "formik": "^2.2.9",
-    "framer": "^2.1.0",
-    "framer-motion": "^5.6.0",
+    "framer": "^2.1.2",
+    "framer-motion": "^6.3.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "mailersend": "^1.3.2",
-    "next": "12.1.0",
+    "next": "^12.1.6",
     "next-sanity": "^0.4.0",
-    "next-sitemap": "^2.1.6",
+    "next-sitemap": "^2.5.20",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
@@ -50,8 +50,8 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "next-unused": "^0.0.6",
-    "sass": "1.43.2",
-    "typescript": "4.6.2"
+    "sass": "^1.43.2",
+    "typescript": "^4.6.2"
   },
   "next-unused": {
     "alias": {},
