--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "find:unused": "next-unused"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/react": "^2.0.0-next.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/raleway": "^4.5.5",
@@ -33,9 +33,9 @@
     "next": "^12.1.6",
     "next-sanity": "^0.4.0",
     "next-sitemap": "^2.5.20",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.1.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
@@ -43,12 +43,12 @@
     "react-spinners": "^0.11.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "@types/react-gtm-module": "^2.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
     "next-unused": "^0.0.6",
     "sass": "^1.43.2",
     "typescript": "^4.6.2"
