--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "find:unused": "next-unused"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.0.0-next.5",
+    "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/raleway": "^4.5.5",
@@ -33,9 +33,9 @@
     "next": "^12.1.6",
     "next-sanity": "^0.4.0",
     "next-sitemap": "^2.5.20",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.2",
     "@types/react-gtm-module": "^2.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
