--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^12.1.6",
     "next-sanity": "^0.4.0",
     "next-sitemap": "^2.5.20",
+    "rating-star": "^1.1.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
