--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-parallax": "^3.3.0",
-    "react-spinners": "^0.11.0"
+    "react-spinners": "^0.11.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
