--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^1.0.6",
     "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@smakss/search": "^1.2.2",
     "formik": "^2.2.9",
     "framer": "^2.1.2",
