--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/raleway": "^4.5.8",
+    "@formspark/use-formspark": "^0.1.39",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
     "@next/bundle-analyzer": "^12.0.9",
     "@popmotion/popcorn": "^0.4.4",
