--- a/sanity/package.json
+++ b/sanity/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.3.1",
+    "sanity-plugin-media": "^1.4.10",
     "sanity-plugin-simple-star-rating": "^0.1.6",
     "styled-components": "^5.2.0"
   }
