--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^2.31.0",
     "@smakss/search": "^1.2.2",
+    "dayjs": "^1.11.5",
     "formik": "^2.2.9",
     "framer": "^2.1.3",
     "framer-motion": "^6.3.3",
