--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./src/**/*"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./src/**/*", "pages/pages/[slug].tsx"],
   "exclude": ["node_modules"]
 }
