--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-request": "^5.0.0",
     "mailersend": "^1.3.2",
     "next": "^12.3.1",
+    "next-sanity-image": "^4.1.0",
     "next-sitemap": "^3.1.23",
     "rating-star": "^1.1.0",
     "react": "^18.2.0",
