--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-request": "^5.0.0",
     "mailersend": "^1.3.2",
     "next": "^13.0.0",
+    "next-sanity-image": "^5.0.0",
     "next-sitemap": "^3.1.23",
     "rating-star": "^1.1.0",
     "react": "^18.2.0",
@@ -50,11 +51,14 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.9",
     "@types/react-gtm-module": "^2.0.1",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "eslint-config-next": "^13.0.0",
     "next-unused": "^0.0.6",
+    "postcss": "^8.4.19",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.2"
   },
   "next-unused": {
