--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-request": "^5.0.0",
     "mailersend": "^1.3.2",
     "next": "^13.0.0",
+    "next-plausible": "^3.6.4",
     "next-sanity-image": "^5.0.0",
     "next-sitemap": "^3.1.23",
     "rating-star": "^1.1.0",
