--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
-    "find:unused": "next-unused"
+    "find:unused": "next-unused",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.1.0",
+    "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/raleway": "^4.5.8",
@@ -31,12 +32,12 @@
     "dayjs": "^1.11.6",
     "formik": "^2.2.9",
     "framer": "^2.2.0",
-    "framer-motion": "^7.6.12",
+    "framer-motion": "^7.6.19",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "mailersend": "^1.3.2",
-    "next": "^13.0.0",
-    "next-plausible": "^3.6.4",
+    "next": "^13.0.6",
+    "next-plausible": "^3.6.5",
     "next-sanity-image": "^5.0.0",
     "next-sitemap": "^3.1.32",
     "rating-star": "^1.1.0",
@@ -51,12 +52,13 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
+    "@types/react": "^18.0.26",
     "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
-    "eslint": "^8.28.0",
-    "eslint-config-next": "^13.0.5",
+    "cypress": "^12.0.1",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "^13.0.6",
     "next-unused": "^0.0.6",
     "postcss": "^8.4.19",
     "sass": "^1.55.0",
