--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^3.0.6",
+    "@shopify/hydrogen-react": "^2023.1.4",
     "@smakss/search": "^1.2.4",
     "@vercel/analytics": "^0.1.6",
     "dayjs": "^1.11.7",
