--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fontsource/raleway": "^4.5.11",
     "@formspark/use-formspark": "^0.1.39",
     "@next/bundle-analyzer": "^13.0.7",
     "@popmotion/popcorn": "^0.4.4",
@@ -27,16 +26,16 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^3.0.6",
-    "@shopify/hydrogen-react": "^2023.1.4",
+    "@shopify/hydrogen-react": "^2023.4.0",
     "@smakss/search": "^1.2.4",
-    "@vercel/analytics": "^0.1.6",
+    "@vercel/analytics": "^1.0.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "framer": "^2.3.0",
-    "framer-motion": "^7.10.3",
+    "framer-motion": "^10.12.12",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "mailersend": "^1.4.5",
+    "groq": "^3.11.1",
     "next": "^13.0.7",
     "next-plausible": "^3.6.5",
     "next-sanity-image": "^5.0.0",
@@ -62,7 +61,6 @@
     "eslint-config-next": "^13.0.7",
     "next-unused": "^0.0.6",
     "postcss": "^8.4.23",
-    "sass": "^1.56.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
