--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^10.12.21",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "groq": "^3.14.2",
     "mailersend": "^1.4.5",
     "next": "^13.0.7",
     "next-plausible": "^3.6.5",
