header layout started

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,8 @@
     "pages/pages/[slug].tsx",
     "components/Global/NavBar.tsx.bak",
     ".next/types/**/*.ts",
-    "pages/index.tsx",
-    "pages/index.tsx",
+    "pages/index.tsx.bak",
+    "pages/index.tsx.bak",
     "pages/pages/[slug].tsx"
   ],
   "exclude": ["node_modules", "cypress"]
