--- a/package.json
+++ b/package.json
@@ -66,13 +66,14 @@
     "next-unused": "^0.0.6",
     "postcss": "^8.4.20",
     "sass": "^1.56.2",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.4"
   },
   "next-unused": {
     "alias": {},
     "debug": true,
     "include": [
+      "app",
       "components",
       "lib",
       "pages"
