--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "postcss": "^8.4.29",
     "sass": "^1.56.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vite": "^4.4.9"
   },
   "next-unused": {
     "alias": {},
