--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-spinners": "^0.13.7",
+    "request-ip": "^3.3.0",
     "swr": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-gtm-module": "^2.0.1",
+    "@types/request-ip": "^0.0.40",
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "cypress": "^12.1.0",
